--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -16,29 +16,29 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@project/account-notify": ["libs/account/notify/src/index.ts"],
-      "@project/authentication": ["libs/account/authentication/src/index.ts"],
-      "@project/blog-comment": ["libs/blog/blog-comment/src/index.ts"],
-      "@project/blog-config": ["libs/blog/blog-config/src/index.ts"],
-      "@project/blog-like": ["libs/blog/blog-like/src/index.ts"],
-      "@project/blog-models": ["libs/blog/models/src/index.ts"],
-      "@project/blog-notify": ["libs/blog/blog-notify/src/index.ts"],
-      "@project/blog-post": ["libs/blog/blog-post/src/index.ts"],
-      "@project/blog-tag": ["libs/blog/blog-tag/src/index.ts"],
-      "@project/blog-user": ["libs/account/blog-user/src/index.ts"],
-      "@project/config": ["libs/account/config/src/index.ts"],
-      "@project/data-access": ["libs/shared/data-access/src/index.ts"],
-      "@project/email-subscriber": [
+      "@backend/account-notify": ["libs/account/notify/src/index.ts"],
+      "@backend/authentication": ["libs/account/authentication/src/index.ts"],
+      "@backend/blog-comment": ["libs/blog/blog-comment/src/index.ts"],
+      "@backend/blog-config": ["libs/blog/blog-config/src/index.ts"],
+      "@backend/blog-like": ["libs/blog/blog-like/src/index.ts"],
+      "@backend/blog-models": ["libs/blog/models/src/index.ts"],
+      "@backend/blog-notify": ["libs/blog/blog-notify/src/index.ts"],
+      "@backend/blog-post": ["libs/blog/blog-post/src/index.ts"],
+      "@backend/blog-tag": ["libs/blog/blog-tag/src/index.ts"],
+      "@backend/blog-user": ["libs/account/blog-user/src/index.ts"],
+      "@backend/config": ["libs/account/config/src/index.ts"],
+      "@backend/data-access": ["libs/shared/data-access/src/index.ts"],
+      "@backend/email-subscriber": [
         "libs/notify/email-subscriber/src/index.ts"
       ],
-      "@project/file-uploader": ["libs/file-vault/file-uploader/src/index.ts"],
-      "@project/file-vault-config": ["libs/file-vault/config/src/index.ts"],
-      "@project/helpers": ["libs/shared/helpers/src/index.ts"],
-      "@project/interceptors": ["libs/shared/interceptors/src/index.ts"],
-      "@project/models": ["libs/blog/models/src/index.ts"],
-      "@project/notify-config": ["libs/notify/config/src/index.ts"],
-      "@project/pipes": ["libs/shared/pipes/src/index.ts"],
-      "@project/shared/core": ["libs/shared/core/src/index.ts"]
+      "@backend/file-uploader": ["libs/file-vault/file-uploader/src/index.ts"],
+      "@backend/file-vault-config": ["libs/file-vault/config/src/index.ts"],
+      "@backend/helpers": ["libs/shared/helpers/src/index.ts"],
+      "@backend/interceptors": ["libs/shared/interceptors/src/index.ts"],
+      "@backend/models": ["libs/blog/models/src/index.ts"],
+      "@backend/notify-config": ["libs/notify/config/src/index.ts"],
+      "@backend/pipes": ["libs/shared/pipes/src/index.ts"],
+      "@backend/shared/core": ["libs/shared/core/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
