--- a/backend/apps/account/.env-example
+++ b/backend/apps/account/.env-example
@@ -1,4 +1,4 @@
-MONGO_DB=readme-users
+MONGO_DB=shop-users
 MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_USER=admin
@@ -12,6 +12,6 @@ RABBIT_HOST=localhost
 RABBIT_PASSWORD=test
 RABBIT_PORT=5672
 RABBIT_USER=admin
-RABBIT_QUEUE=readme.notify.income
-RABBIT_EXCHANGE=readme.notify
+RABBIT_QUEUE=shop.notify.income
+RABBIT_EXCHANGE=shop.notify
 PORT=3001
