--- a/backend/apps/account/docker-compose.dev.yml
+++ b/backend/apps/account/docker-compose.dev.yml
@@ -1,9 +1,9 @@
 version: '3.9'
 services:
-  readme.account.mongo:
+  shop.account.mongo:
     image: mongo:4.4
     restart: always
-    container_name: readme.account.mongo
+    container_name: shop.account.mongo
 
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
@@ -14,12 +14,12 @@ services:
       - 27017:27017
 
     volumes:
-      - readme.mongo.account:/data/db
+      - shop.mongo.account:/data/db
 
-  readme.user.mongo.ui:
+  shop.user.mongo.ui:
     image: mongo-express:1.0.2-20
     restart: always
-    container_name: readme.user.mongo.ui
+    container_name: shop.user.mongo.ui
     ports:
       - 8081:8081
     environment:
@@ -27,7 +27,7 @@ services:
       ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_PASSWORD}
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_USER}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PASSWORD}
-      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@readme.account.mongo:${MONGO_PORT}/
+      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@shop.account.mongo:${MONGO_PORT}/
 
 volumes:
-  readme.mongo.account:
+  shop.mongo.account:
