--- a/backend/apps/blog/shop.env.example
+++ b/backend/apps/blog/shop.env.example
@@ -9,7 +9,7 @@ RABBIT_HOST=localhost
 RABBIT_PASSWORD=test
 RABBIT_PORT=5672
 RABBIT_USER=admin
-RABBIT_QUEUE=readme.notify.income
-RABBIT_EXCHANGE=readme.notify
+RABBIT_QUEUE=shop.notify.income
+RABBIT_EXCHANGE=shop.notify
 RABBITMQ_DEFAULT_USER=admin
 RABBITMQ_DEFAULT_PASS=test
