--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "Шесть городов",
-  "version": "0.3.0",
+  "name": "Guitar Shop",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "history": "^5.2.0",
-    "leaflet": "1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -49,7 +48,6 @@
     "@testing-library/user-event": "^14.2.0",
     "@types/faker": "^5.5.8",
     "@types/jest": "^26.0.24",
-    "@types/leaflet": "^1.7.11",
     "@types/node": "^12.20.55",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
