--- a/backend/nx.json
+++ b/backend/nx.json
@@ -40,7 +40,8 @@
         "apps/shop-e2e/**/*",
         "apps/notify-e2e/**/*",
         "apps/file-vault-e2e/**/*",
-        "apps/api-e2e/**/*"
+        "apps/api-e2e/**/*",
+        "apps/cli-e2e/**/*"
       ]
     }
   ]
