--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,19 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.0",
-    "axios": "^0.21.1",
-    "classnames": "^2.5.1",
+    "@reduxjs/toolkit": "1.5.0",
+    "axios": "0.21.1",
+    "classnames": "2.5.1",
     "dayjs": "1.11.10",
-    "history": "^5.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.2.1",
+    "history": "5.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "8.0.2",
+    "react-router-dom": "6.2.1",
     "react-scripts": "5.0.1",
-    "react-select": "^5.4.0",
-    "react-toastify": "^9.0.8",
-    "reselect": "^4.0.0"
+    "react-select": "5.4.0",
+    "react-toastify": "9.0.8",
+    "reselect": "4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
