--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,9 +55,14 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "axios-mock-adapter": "^1.19.0",
-    "eslint-config-htmlacademy": "^10.0.1",
     "faker": "^5.5.3",
     "redux-devtools-extension": "2.13",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@typescript-eslint/eslint-plugin": "5.60.1",
+    "@typescript-eslint/parser": "5.57.1",
+    "eslint": "8.43.0",
+    "eslint-config-htmlacademy": "9.1.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.1"
   }
 }
